--- a/Medac-stars/src/main/java/medac/stars/ui/arena/TablaArenas.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/arena/TablaArenas.form
@@ -83,6 +83,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Volver al menu principal"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="backMainMenuButtonActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
